Switch to snake_case, start deprecation